--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,7 @@
 
                                         <!-- Resources -->
                                         <li class="dropdown">
-                                        <a href="#">Resources</a>  
+                                        <a href="#">Opportunities</a>  
                                         <ul class='dropdown-menu'>
                                          <li> <a href="{% url 'resource:job-list' %}">Jobs</a> </li> 
                                        <li> <a href="{% url 'resource:files' %}">Other</a> </li> 
