--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -132,12 +132,22 @@ their career knowledge</p>
                             <div class="magazine-new-img">
                                 <legend class="magazine-badge label-purple">Testimonia</legend>                                    
                             </div>
-                            <h3><a href="#">Simelque Untine Culpaqui Officia Deserunt Blanditiis Praesentium</a></h3>
+                            <h3><a href="#">Seminar Series</a></h3>
                             <div class="by-author">
-                                <strong>By Jack Villo</strong>
-                                <span>/ September 19, 2013</span>
+                                <strong>By Mira</strong>
+                                <span>/Department of Medical Biophysics to Seminar</span>
                             </div> 
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate...</p>
+                            <p>
+                            I personally gained from the workshop hosted on Tuesday January 31. So I would like to thank you for bringing inspiring speakers and look forward
+                             for workshops aimed to help students network and ppare for life after school.
+to Seminar
+                            </p>
+                             <h3><a href="#">Networking Reception</a></h3>
+                           
+                            <p>
+                           I found the after informal session most helpful. The guest who stayed behind 
+                           was genuinely interested in providing mentorship.
+                            </p>
                         </div>
                     </div>
                 </div>
