--- a/lscdsUser/templates/profile-event.html
+++ b/lscdsUser/templates/profile-event.html
@@ -20,7 +20,7 @@
                         {% if event.registration_open %}
                         <tr>  <td>  <strong>{{event.name}} </strong> {% csrf_token %}
                                 <input type="hidden" name="event_id" value="{{event.pk}}"> </td> 
-                            <td> <button type="submit" class="btn btn-primary pull-right">Regiser</button></td>
+                            <td> <button type="submit" class="btn btn-primary pull-right">Register</button></td>
                       {% elif event.registration_start > now %}
                       <td>  <strong>{{event.name}} </strong> </td>
                         <td class="alert alert-info col-md-6" role="alert">Registration starts in {{event.registration_start|timeuntil}}</td>
@@ -51,14 +51,14 @@
     <h4>{{ eventtype.grouper }}</h4>
   
       
-         <form class="registration"  action="{% url 'profile-event-registration' %}" method="post">
+         <form class="registration" id="EventForm" action="{% url 'profile-event-registration' %}" method="post">
                 <table  class='table table-bordered'>
                     <tbody> 
                       {% for event in eventtype.list %}
                       {% if event.registration_open %}
                         <tr>  <td>  <strong>{{event.name}} </strong> {% csrf_token %}
                                 <input type="hidden" name="event_id" value="{{event.pk}}"> </td> 
-                            <td> <button type="submit" class="btn btn-primary pull-right">Regiser</button></td>
+                            <td> <a data-toggle="modal" data-target="#registration" type="submit" class="btn btn-primary pull-right">Register</a></td>
                       {% elif event.registration_start > now %}
                       <td>  <strong>{{event.name}} </strong> </td>
                         <td class="alert alert-info col-md-6" role="alert">Registration starts in {{event.registration_start|timeuntil}}</td>
@@ -154,5 +154,56 @@
    </div> <!-- End of row  -->    
     
 </div> <!-- End of col-10  -->
+
+
+<div id="registration" class="modal">
+	<div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <a href="#" data-dismiss="modal" aria-hidden="true" class="close">×</a>
+             <h3>Registration policy</h3>
+        </div>
+        <div class="modal-body">
+             <p>By clicking this box, I understand that in order to confirm 
+             that I have registered successfully, I must receive a confirmation 
+             email and provide proof if necessary at the time of event attendance.
+             </p>
+             <p>If you do not receive
+              confirmation email, please contact: lscds.uoft[at]gmail.com</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#" id="btnYes" class="btn confirm">I Understand</a>
+          <a href="#" data-dismiss="modal" aria-hidden="true" class="btn secondary">No</a>
+        </div>
+      </div>
+    </div>
+</div>
+
 {% endblock %}
+{% block javascript %}
+<script type="text/javascript">
+
+$(document).ready(function() {
+$('#registration').on('show', function(e) {
+  //  var link = $(this).data('link'),
+   //     confirmBtn = $(this).find('.confirm');
+          $('#registration').focus()
+        
+})
+
+$('#btnYes').click(function() {
+  
+    // handle form processing here
+  	   $('#registration').modal('toggle')
+ 
+    $("#EventForm").submit();
+  
+});
+
+}) // end document ready
+  </script>
+{% endblock %}
+
+
+
 
