--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -4,10 +4,10 @@
 {% block title %}{% trans "Password reset complete" %}{% endblock %}
 
 {% block content %}
-<p>
+<legend>
     {% trans "Your password has been reset!" %}
-    {% trans "You may now" %}<a href="{{ login_url }}">{% trans "log in" %}</a>.
-</p>
+    {% trans "You may now " %}<a href="{{ login_url }}">{% trans "log in" %}</a>.
+</legend>
 {% endblock %}
 
 
