--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,15 +1,19 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
+{% load future %}
+{% load staticfiles %}
+{% load static %}
+{% load url from future %}
 
 {% block title %}{% trans "Confirm password reset" %}{% endblock %}
 
 {% block content %}
-<p>{% trans "Enter your new password below to reset your password:" %}</p>
-<form method="post" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="{% trans 'Set password' %}" />
-</form>
+<legend>{% trans "Enter your new password below to reset your password:" %}</legend>
+
+  
+    {% crispy form %}
+
 {% endblock %}
 
 
