--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,19 +1,23 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
-
+{% load crispy_forms_tags %}
+{% load future %}
+{% load staticfiles %}
+{% load static %}
+{% load url from future %}
 {% block title %}{% trans "Reset password" %}{% endblock %}
 
 {% block content %}
 <p>
     {% blocktrans %}
-    Forgot your password?  Enter your email in the form below and we'll send you instructions for creating a new one.
+   
+   <legend> Enter your email in the form below and we'll send 
+   you instructions for creating a new one.</legend>
     {% endblocktrans %}
 </p>
-<form method="post" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="{% trans 'Reset password' %}" />
-</form>
+
+    {% crispy form %}
+
 {% endblock %}
 
 
